better default index.html

--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -1,7 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Title</title>
+    <!-- SEO -->
+    <meta name="description" content="A brief description of the page" />
+    <meta name="keywords" content="keyword1, keyword2, keyword3" />
+    <meta name="author" content="Your Name or Company Name" />
   </head>
   <body>
     <div id="root"></div>
